<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.usuario.music4emotions.MainActivity">

    <TextView
        android:id="@+id/header"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Header" />

    <!-- MAIN GALLERY OF LIBRARIES -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/happy"
        style="@style/Image_icon"
        android:src="@drawable/happy" />

     <ImageView
         android:id="@+id/hungover"
         style="@style/Image_icon"
         android:src="@drawable/hungover" />

     <ImageView
         android:id="@+id/relaxed"
         style="@style/Image_icon"
         android:src="@drawable/relaxed" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/energetic"
            style="@style/Image_icon"
            android:src="@drawable/energetic" />

        <ImageView
            android:id="@+id/sad"
            style="@style/Image_icon"
            android:src="@drawable/sad" />

        <ImageView
            android:id="@+id/concentrate"
            style="@style/Image_icon"
            android:src="@drawable/concentrate" />

    </LinearLayout>

    <TextView
        android:id="@+id/explanation_main_screen"
        style="@style/explanations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/main_screen_explanation" />

    <!-- BOTTOM MENU -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/menu_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_transparent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/music_store"
            style="@style/menu"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/music_store" />

        <TextView
            android:id="@+id/search"
            style="@style/menu"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="GoToSearch"
            android:text="@string/search" />

    </LinearLayout>

</LinearLayout>

